--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,6 @@
   display: flex;
   justify-content: space-evenly;
   border-bottom: 2px solid #F8F1E9;
-  padding-bottom: 10px;
   gap: 8px;
 }
 
@@ -93,7 +92,7 @@
   align-items: center;
   justify-content: flex-end;
   min-height: 200px;
-  width: calc(100% / 7);
+  width: calc(70% / 7);
   gap: 8px;
 }
 
@@ -137,7 +136,7 @@
   color: var(--neutral-color_very-pale-orange);
   padding: 4px;
   border-radius: 4px;
-  width: 100%;
+  width: calc(100% + 10px);
   font-size: 18px;
   text-align: center;
   max-width: 70px;
@@ -178,10 +177,20 @@
   .day {
     font-size: 15px;
   }
+
+  .graph_value {
+    font-size: 10px;
+  }
 }
 
 @media(max-width: 375px) {
   .day {
     font-size: 12px;
+  }
+}
+
+@media(max-width: 320px) {
+  .graph_value {
+    font-size: 8px;
   }
 }
